[metadata]
name = multi-convcnp
version = 0.1.0
author = Zinzan Gurney
author_email = gurney.zinzan@gmail.com
description = An implementation of using the ConvCNP for multiple continuous and discrete valued outputs.
url = https://github.com/ZGurney/iib-project
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
